--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         applicationId "eu.makeitapp.droidcon"
@@ -29,19 +29,23 @@ repositories {
 
 dependencies {
     //MIA SDK dep, tha AAR is in the libs folder
-    compile(name: 'android-baas-sdk-release', ext: 'aar')
+    compile(name: 'android-baas-sdk-core-1.0.0', ext: 'aar')
+    compile(name: 'android-baas-sdk-push-1.0.0', ext: 'aar')
+    compile(name: 'android-baas-sdk-user-1.0.0', ext: 'aar')
+
+
 
     //Sdk dep
-    compile 'com.google.android.gms:play-services-base:7.5.0'
-    compile 'com.google.android.gms:play-services-gcm:7.5.0'
+    compile 'com.google.android.gms:play-services-base:7.8.0'
+    compile 'com.google.android.gms:play-services-gcm:7.8.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
 
     //App dep
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
